tests/errors/sem.arg-count-mismatch.param-struct.or
main :: () -> void {
    arr :: struct(t: int) {
        a := t;
    };

    arr();
};
